# us-eli-mcp

./: .gitignore  .publication-gate.json  DISCOVERY.md  README.md  SOURCES.md  glama.json  pyproject.toml  server.json
.github/workflows/: release.yml
runtime/: us-runtime.json
src/us_eli_mcp/: __init__.py  __main__.py  audit.py  cache.py  citations.py  client.py  courtlistener_client.py  ecfr_client.py  federal_register_client.py  govinfo_client.py  models.py  runtime.py  server.py
tests/: test_feature003_offline.py  test_feature003_smoke.py  test_govinfo_smoke.py  test_smoke.py
tests/fixtures/: courtlistener_search.json  ecfr_search.json  ecfr_versions.json  fr_document.json  fr_search.json
