[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "us-eli-mcp"
version = "0.3.0"
description = "MCP server for US law: bills (Congress.gov), US Code (GovInfo), Federal Register, case law (CourtListener), eCFR - with verifiable citations."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Matematic Solutions", email = "kontakt@matematic.co" },
    { name = "Wieslaw Mazur", email = "mazur.wieslaw2022@gmail.com" },
]
keywords = ["mcp", "legaltech", "usa", "congress", "law"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "diskcache>=5.6",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/matematicsolutions/us-eli-mcp"
Issues = "https://github.com/matematicsolutions/us-eli-mcp/issues"
Homepage = "https://matematic.co"

[project.scripts]
us-eli-mcp = "us_eli_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/us_eli_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/us_eli_mcp/server.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
